@@ -283,11 +283,11 @@ $LastChangedRevision$
 //--------------------------------------------------------------
 	function tsi($name,$datevar,$time,$tab='')
 	{
-		$size = ($name=='year') ? 4 : 2;
-
+		$size = ($name=='year' or $name=='exp_year') ? 4 : 2;
+		$s = ($time == NULLDATETIME)? '' : safe_strftime($datevar, $time);
 		return n.'<input type="text" name="'.$name.'" value="'.
-			safe_strftime($datevar, $time)
+			$s
 		.'" size="'.$size.'" maxlength="'.$size.'" class="edit"'.(empty($tab) ? '' : ' tabindex="'.$tab.'"').' title="'.gTxt('article_'.$name).'" />';
 	}
-
+	
 ?>
